This happens at the end of a program, or often when meta-data changes.
This is annoying because you can hear the music drop.
ogg debug: end of a group of logical streamsogg debug: found vorbis headerogg debug: will reuse old stream to avoid glitchogg debug: beginning of a group of logical streamsmain debug: ES_OUT_RESET_PCR called main warning: received buffer in the future
[0x7f8c20c08328] ogg demux debug: end of a group of logical streams[0x7f8c20c08328] ogg demux debug: File length is 0 bytes[0x7f8c20c08328] ogg demux debug: found vorbis header[0x7f8c20c08328] ogg demux debug: will reuse old stream to avoid glitch[0x7f8c20c08328] ogg demux debug: beginning of a group of logical streams[0x7f8c3c00acd8] main input warning: clock gap, unexpected stream discontinuity[0x7f8c3c00acd8] main input warning: feeding synchro with a new reference point trying to recover from clock gap[0x7f8c100009e8] main audio output warning: buffer too late (102944), up-sampling
the gaps in the stream occur when I use the default buffer size. after changing to a 10 second buffer, then the stream is up or down sampled with the log snippet above, and the audio sounds as if someone is speeding up/slowing down the stream.
I can attempt to reproduce this /and/ record the audio being sent to the speakers, or provide any other logs/information. The gaps upon rebuffering due to icecast sending the metadata (even if the metadata hasn't actually changed) has been going on for as long as I can remember. maybe icecast (the server for the above mentioned stream last I checked) isn't producing a standard stream?
demux: ogg: reuse decoders when fmt is compatible (fix [#5394](https://code.videolan.org/videolan/vlc/-/issues/5394))Avoids rebuffering.Wrong way reverted by 1d6f8d8174d4e2c704732f7ec13c71df6dd8950d