demux: ogg: reuse decoders when fmt is compatible (fix #5394)

Avoids rebuffering.
Wrong way reverted by 1d6f8d8174d4e2c704732f7ec13c71df6dd8950d